force-app/main/default/objects/Detalle_Tarifa_Agente__c/fields/Embalaje__c.field-meta.xml
<CustomField>
    <fullName>Embalaje__c</fullName>
    <label>Embalaje</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sobre</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>Cajas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>