force-app/main/default/objects/Detalle_Tarifa_Agente__c/fields/Tarifa_Agente__c.field-meta.xml
<CustomField>
    <fullName>Tarifa_Agente__c</fullName>
    <label>Tarifa Agente</label>
    <referenceTo>Tarifa_Agente__c</referenceTo>
    <relationshipLabel>Detalles Tarifas Agentes</relationshipLabel>
    <relationshipName>Detalles_Tarifas_Agentes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>